Adaptated for Java 9+